# PiGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: Behavior.hpp.8B41434D2575674D.idx  Behaviors.hpp.DB066D97CAB61BE8.idx  Bordered.hpp.1C0A2D78CC699C29.idx  CircleShape.cpp.9FBA576831DD91A3.idx  CircleShape.hpp.6A71FC9E21BC60ED.idx  Clickable.cpp.D7AC3EC7D0DB631B.idx  Clickable.hpp.28A2AD018B1E8588.idx  Color.cpp.D7B4668C5309DCD7.idx  Color.hpp.1573168A418695EE.idx  ColorFill.hpp.B18C77AFA3F74104.idx  CoreApplication.cpp.8C1DB3F02F92FAAB.idx  CoreApplication.hpp.0797C8367FE1494B.idx  DefaultBehavior.cpp.75E47F958258A40C.idx  DefaultBehavior.hpp.1F150C616753F2BA.idx  Draggable.cpp.209F65C9DB138CD8.idx  Draggable.hpp.1DD1EBD7D65D1351.idx  Draw.cpp.8378C7B2770F1A55.idx  Event.cpp.819F22749FBED582.idx  Event.hpp.23BA17DA30F9E4DB.idx  EventManager.cpp.7E4907864E2F1314.idx  EventManager.hpp.53BBDC6ACA961886.idx  EventManager.ipp.71C3BC0F03864093.idx  EventSystem.cpp.2465D4C98284A300.idx  EventSystem.hpp.7FE79722E72E8235.idx  EventSystem.ipp.8ADCCD0065BF6151.idx  Events.cpp.229F754377C61C30.idx  Font.hpp.75FE4B2E1B603BF2.idx  FpsLabel.cpp.9326EDFD5E2620D7.idx  FpsLabel.hpp.0688F7C9E16F2AB3.idx  Frame.cpp.4B1DC9046D9CC641.idx  Frame.hpp.27D9C743C3D21B7F.idx  GUI.hpp.2FE53E76BBEFC802.idx  GradeCanvas.hpp.77FCBD182AE66B3F.idx  IPlatform.hpp.3369B37457BDDBF3.idx  Image.cpp.E5B32C686B1439B1.idx  Image.hpp.C53A8B523246A79E.idx  Keyboard.cpp.FE062B98078520F0.idx  Keyboard.hpp.3C3D85C13235DF4F.idx  KeyboardEvent.cpp.37E14DB85631DEFE.idx  KeyboardEvent.hpp.4EF4E473865566D1.idx  (+61 more)
Debug/: CMakeCache.txt  Makefile  ShishGLTargets.cmake  cmake_install.cmake
Debug/docs/: Doxyfile.doxygen  Makefile  cmake_install.cmake
Debug/src/Core/: Makefile  cmake_install.cmake
Debug/src/DebugUtilities/: Makefile  cmake_install.cmake
Debug/src/GUI/: Makefile  cmake_install.cmake
Debug/tests/: Makefile  TestAbstracts  cmake_install.cmake
assets/: LayoutDump.dot  ShishGL_log  Subscriptions.dot  layout.dot
assets/text/: TEST_TEXT.txt
docs/: BehaviorManager_8hpp.html  BehaviorManager_8hpp__dep__incl.map  BehaviorManager_8hpp__dep__incl.md5  BehaviorManager_8hpp__incl.map  BehaviorManager_8hpp__incl.md5  BehaviorManager_8hpp_source.html  Behavior_8hpp.html  Behavior_8hpp__dep__incl.map  Behavior_8hpp__dep__incl.md5  Behavior_8hpp__incl.map  Behavior_8hpp__incl.md5  Behavior_8hpp_source.html  Behaviors_8hpp.html  Behaviors_8hpp__dep__incl.map  Behaviors_8hpp__dep__incl.md5  Behaviors_8hpp__incl.map  Behaviors_8hpp__incl.md5  Behaviors_8hpp_source.html  Bordered_8hpp.html  Bordered_8hpp__dep__incl.map  Bordered_8hpp__dep__incl.md5  Bordered_8hpp__incl.map  Bordered_8hpp__incl.md5  Bordered_8hpp_source.html  CMakeLists.txt  CircleShape_8cpp.html  CircleShape_8cpp__incl.map  CircleShape_8cpp__incl.md5  CircleShape_8hpp.html  CircleShape_8hpp__dep__incl.map  CircleShape_8hpp__dep__incl.md5  CircleShape_8hpp__incl.map  CircleShape_8hpp__incl.md5  CircleShape_8hpp_source.html  Clickable_8cpp.html  Clickable_8cpp__incl.map  Clickable_8cpp__incl.md5  Clickable_8hpp.html  Clickable_8hpp__dep__incl.map  Clickable_8hpp__dep__incl.md5  (+1738 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+120 more)
examples/: CMakeLists.txt
examples/ray-casting/: .ShishGL_log  CMakeLists.txt  Makefile
examples/ray-casting/include/ShishGL/: draw.hpp  vector3.hpp  window.hpp
examples/ray-casting/include/Sphere/: gamification_button.hpp  sphere_canvas.hpp
examples/ray-casting/src/: SphereCast.cpp  SphereCast.hpp  main.cpp
examples/ray-casting/src/ShishGL/: draw.cpp  vector3.cpp
examples/ray-casting/src/Sphere/: sphere_canvas.cpp
include/ShishGL/Core/: CoreApplication.hpp
include/ShishGL/DebugUtilities/: CursorLocator.hpp  FpsLabel.hpp  GradeCanvas.hpp
include/ShishGL/GUI/: GUI.hpp  UIButton.hpp  UICanvas.hpp  UICheckbox.hpp  UIDialog.hpp  UIFileDialog.hpp  UIFileSelector.hpp  UIFrame.hpp  (+10 more)
scripts/: html_colors.data  prettify_colors.py
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  CoreApplication.cpp
src/Core/EventSystem/: CMakeLists.txt  Event.cpp  EventManager.cpp  EventSystem.cpp  Listener.cpp  SubscriptionManager.cpp
src/Core/LogSystem/: CMakeLists.txt  LogSystem.cpp
src/Core/Primitives/: CMakeLists.txt  Color.cpp  Frame.cpp  Time.cpp  Vector2.cpp  Vector3.cpp
src/Core/RenderSystem/: CMakeLists.txt  Image.cpp  RenderSystem.cpp
src/Core/RenderSystem/GraphicsPlatform/: CMakeLists.txt  Image.cpp
src/Core/RenderSystem/GraphicsPlatform/Events/: CMakeLists.txt  KeyboardEvent.cpp  MouseEvent.cpp  PlatformListener.cpp  TimerEvent.cpp
src/Core/RenderSystem/GraphicsPlatform/Input/: CMakeLists.txt  Keyboard.cpp
src/Core/RenderSystem/SfmlPlatform/: CMakeLists.txt  Draw.cpp  Events.cpp  Platform.cpp
src/Core/RenderSystem/XPlatform/: CMakeLists.txt  Platform.cpp
src/Core/ResourceManager/: CMakeLists.txt  ResourceManager.cpp
src/Core/Window/: CMakeLists.txt  Viewport.cpp  Window.cpp  WindowManager.cpp
src/DebugUtilities/: CMakeLists.txt  CursorLocator.cpp
src/GUI/: CMakeLists.txt  UICanvas.cpp  UIDialog.cpp  UIFrame.cpp  UIScrollbar.cpp  UITextInput.cpp
src/GUI/TextBuffer/: CMakeLists.txt  Text.cpp  TextBuffer.cpp  UILabel.cpp
src/GUI/UIWindow/: CMakeLists.txt  UIWindow.cpp
src/GUI/UIWindow/Behaviors/: CMakeLists.txt  Clickable.cpp  DefaultBehavior.cpp  Draggable.cpp  Slidable.cpp
src/GUI/UIWindow/Shapes/: CMakeLists.txt  CircleShape.cpp  RectangleShape.cpp
src/GUI/UIWindow/Styles/: CMakeLists.txt
tests/: CMakeLists.txt  TestAbstracts.cpp
tests/assets/: .gitignore  LayoutDump.dot  LayoutDumpAfter.dot  ShishGL_log  Sub.dot  Subscriptions.dot  subs.dot
(+91 files in other folders)
